fixing chat z-index

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -136,6 +136,10 @@ input {
 }
 /* account page-------------- */
 
+#dynamic-section {
+  z-index: -4;
+}
+
 #account-dynamic-section {
   height: 100%;
 }
@@ -263,7 +267,7 @@ input {
   position:fixed;
   width: 150px;
   height: 150px;
-  z-index: 2;
+  z-index: 1005;
   overflow: visible;
   display: flex;
   justify-content: center;
@@ -288,7 +292,7 @@ input {
 #chat-menu.active li button{
   background: transparent;
   border: none;
-  z-index: 5;
+  z-index: 1008;
   position: relative;
   transform: rotate(calc(360deg / -4 * var(--i)));
 }
@@ -314,7 +318,7 @@ input {
   position: relative;
   font-size: 1.5rem;
   padding:5px;
-  z-index: 4;
+  z-index: 1007;
   border:1px black solid;
   border-radius: 50%;
   color:black;
@@ -517,7 +521,7 @@ input {
     border-radius:50%;
     float:left;
     width:15%;
-    z-index: 3;
+    z-index: 1006;
   }
 
   .chat-msg.self > .msg-avatar img {
@@ -526,7 +530,7 @@ input {
     border-radius:50%;
     float:right;
     width:15%;
-    z-index: 3;
+    z-index: 1006;
   }
   .cm-msg-text {
     background:white;
@@ -774,5 +778,5 @@ font-style: italic;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 999; /* Ensures the text is on top of everything */
+  z-index: 500;
 }
